# singularity-store

./: CONTRIBUTING.md  README.md  meson.build
data/: dev.sinty.store.desktop  dev.sinty.store.gschema.xml
po/: POTFILES.in  meson.build
resources/: dev.sinty.store.gresource.xml
src/: app.vala  app_info.vala  main.vala  window.vala
ui/: main.vetro
